# ComfyUI_Local_Wildcards

./: .gitignore  LICENSE  README.md  __init__.py  install.py  pyproject.toml  uninstall.py  wildcard_text_node.py
web/JS/: local_wildcards.js
